initial commit of love letters

--- a/bash/index.html
+++ b/bash/index.html
@@ -1,23 +1,43 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script|Questrial" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/bash.css">
 	<title>Got Me Feelin' Bash-ful</title>
 </head>
 <body>
-	<h3>Dear Bash,</h3>
+	<header>
+		<h1>Love Letters</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="../git/index.html">Git</a></li>
+			<li><a href="../github/index.html">Git Hub</a></li>
+			<li style="float:right"><a href="../bash/index.html">Bash</a></li>
+		</ul>
+	</nav>
+	<h2>Dear Bash,</h2>
 
-	<p>I know we had it rough in the start. I've never been with a terminal before, so I didn't know what to expect; hey, its not my fault all my exes had beautiful GUI's!</p>
+	<section>
+		<p>I know we had it rough in the start. I've never been with a terminal before, so I didn't know what to expect; hey, its not my fault all my exes had beautiful GUI's!</p>
 
-	<p>But you changed me.</p>
+		<p>But you changed me.</p>
 
-	<p>With your powerful command line prompts, optimized for speed and efficiency, you've optimized the art of interacting with a computer. Using simple commands, I can create directories (mkdir), navigate through those directories (cd and cd . .), and create files (touch) to my heart's content. And if I ever get lost in your vast ocean of directories, I can always just ask you which directory I'm in (pwd) and/or the contents of that directory (ls), and I know you'll always have the answer.</p> 
+		<p>With your powerful command line prompts, optimized for speed and efficiency, you've perfected the art of interacting with a computer. Using simple commands, I can create directories (mkdir), navigate through those directories (cd and cd . .), and create files (touch) to my heart's content. And if I ever get lost in your vast ocean of directories, I can always just ask you which directory I'm in (pwd) and/or the contents of that directory (ls), and I know you'll always have the answer.</p> 
+	
+		<p>And I love your friends git and github! Your close friendship with them allows me to push and pull my files to github and keep precise versioning controls with git integration, all within your terminal. I mean, how amazing is that?</p>
+	
+		<p>My favorite part about you is whenever I (echo) "I love you", you always say it right back to me. No matter what. If that isn't true love, I don't know what is.</p>
+	
+		<p>Yours truly,</p> 
+		<p>Ari Klebanov</p>
+	</section>
 
-	<p>And I love your friends git and github! Your close friendship with them allows me to push and pull my files to github and keep precise versioning controls with git integration, all within your terminal. I mean, how amazing is that?</p>
-
-	<p>My favorite part about you is whenever I (echo) "I love you", you always say it right back to me. No matter what. If that isn't true love, I don't know what is.</p>
-
-	<p>Yours truly,</p> 
-	<p>Ari Klebanov</p>
+	<footer>
+		Copyrighted by Ari Klebanov for Creative Dev Tools, 2019
+	</footer>
+	
 
 </body>
 </html>
