--- a/git/index.html
+++ b/git/index.html
@@ -1,26 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Git Out Of My Life</title>
+	<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Dancing+Script|Special+Elite" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/git.css">
+	<title>Git Lost</title>
 </head>
 <body>
-	<h3>Dear Git,</h3>
+	<header>
+		<h1>Love Letters</h1>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="../index.html">Home</a></li>
+			<li><a href="../bash/index.html">Bash</a></li>
+			<li><a href="../github/index.html">Git Hub</a></li>
+			<li style="float:right"><a href="../git/index.html">Git</a></li>
+		</ul>
+	</nav>
+	<h2>Dear Git,</h2>
+	<section>
+		<p>That's it. We're through.</p>
 
-	<p>That's it. We're through.</p>
+		<p>I'm sick and tired of your possessive and controlling nature. I only asked you to be a part of my life because I thought you'd be able to help me keep track of my coding projects, but now that I see how rude you are, I want no part of you.</p>
 
-	<p>I'm sick and tired of your possessive and controlling nature. I only asked you to be a part of my life because I thought you'd be able to help me keep track of my coding projects, but now that I see how rude you are, I want no part of you.</p>
+		<p>Every time I need to communicate with you, I have to say (git) before any command, or else you won't know I'm talking to you. How much more conceited can you be? Making me state your name every time... Maybe you should check your ego.</p>
 
-	<p>Every time I need to communicate with you, I have to say (git) before any command, or else you won't know I'm talking to you. How much more conceited can you be? Making me state your name every time... Maybe you should check your ego.</p>
+		<p>And every damn time I need you I have to manually (add .) you in. Every time. Why can't you just be there for me before I even ask? I mean, can't you read my mind? Stop being so selfish.</p>
 
-	<p>And every damn time I need you I have to manually (add .) you in. Every time. Why can't you just be there for me before I even ask? I mean, can't you read my mind? Stop being so selfish.</p>
+		<p>Any time I need to save my changes to my project, you make me (commit) them, when you won't ever commit to me. I've been patient, and I've waited for you, but you'll never tell me that you're ready to commit. I'm always the one who commits to you first. And that hurts.</p>
 
-	<p>Any time I need to save my changes to my project, you make me (commit) them, when you won't ever commit to me. I've been patient, and I've waited for you, but you'll never tell me that you're ready to commit. I'm always the one who commits to you first. And that hurts.</p>
+		<p>And for a platform of little words, requiring me to add a message to every commit (-m "message") seems beyond hypocritical. And thats not an attractive quality on you.</p>
 
-	<p>And for a platform of little words, requiring me to add a message to every commit (-m "message") seems beyond hypocritical. And thats not an attractive quality on you.</p>
+		<p>Let this be my final goodbye to you, because when I (checkout) of this relationship, I hope to Super Undo the years I've wasted on you.</p> 
 
-	<p>Let this be my final goodbye to you, because when I (checkout) of this relationship, I hope to Super Undo the years I've wasted on you.</p> 
-
-	<p>Not yours anymore,</p>
-	<p>Ari Klebanov</p>
+		<p>Not yours anymore,</p>
+		<p>Ari Klebanov</p>
+	</section>
+	
+	<footer>
+		Copyrighted by Ari Klebanov for Creative Dev Tools, 2019
+	</footer>
 </body>
 </html>
