--- a/index.html
+++ b/index.html
@@ -1,19 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link href="https://fonts.googleapis.com/css?family=Dancing+Script|Amatic SC" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<title>Love Letters</title>
 </head>
 <body>
-	<section>
-		<a href="bash/index.html">Bash</a>
-	</section>
-	<section>
-		<a href="git/index.html">Git</a>
-	</section>
-	<section>
-		<a href="github/index.html">Git Hub</a>
-	</section>
+	<header>
+		<h1>Love Letters</h1>
+		<h3>Please select a letter to view</h3>
+	</header>
+	<div>
+		<section>
+			<a href="bash/index.html"><img border="0" alt="Bash" src="img/Bash.png" width="200" height="200"></a>
+			<p>Bash</p>
+		</section>
+		<section>
+			<a href="git/index.html"><img border="0" alt="Git" src="img/Git.jpg" width="200" height="200"></a>
+			<p>Git</p>
+		</section>
+		<section>
+			<a href="github/index.html"><img border="0" alt="Git Hub" src="img/Github.png" width="200" height="200"></a>
+			<p>Git Hub</p>
+		</section>
+	</div>
+	<!-- <div>
+		<a href="../index.html">Return back to Ari's Portal</a>
+	</div> -->
 
-
+	<footer>
+		Copyrighted by Ari Klebanov for Creative Dev Tools, 2019
+	</footer>
 </body>
 </html>
